--- a/index.html
+++ b/index.html
@@ -63,6 +63,29 @@
     </template>
   </div>
 
+  <!-- Footer -->
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+
+
+
   <div class="max-w-2xl mx-auto">
     <!-- Header -->
     <div class="bg-white rounded-2xl shadow-xl p-6 mb-6">
@@ -274,6 +297,18 @@
                       <span x-text="status.HolderPhone"></span>
                     </a>
                   </template>
+                  <template x-if="status.HolderPhone && status.HolderPhone.trim() !== ''">
+                    <a 
+                      :href="getWhatsAppLinkToHolder()"
+                      target="_blank"
+                      rel="noopener"
+                      class="text-green-600 hover:text-green-800 text-sm flex items-center gap-1 font-semibold"
+                      title="Message holder on WhatsApp"
+                    >
+                      <span>💬</span>
+                      <span>WhatsApp</span>
+                    </a>
+                  </template>
                 </div>
               </div>
               <div class="flex items-center justify-between">
@@ -414,7 +449,15 @@
                       <p class="text-sm font-semibold text-blue-800 mb-2">
                         📞 Next person to call: <span x-text="getCurrentPersonToCall().Name"></span>
                       </p>
-                      <div class="flex justify-center">
+                      <div class="flex justify-center gap-2">
+                        <a 
+                          :href="getWhatsAppLink(getCurrentPersonToCall().Phone, getCurrentPersonToCall().Name)"
+                          target="_blank"
+                          rel="noopener"
+                          class="bg-green-500 hover:bg-green-600 text-white px-4 py-2 rounded-lg text-sm font-semibold transition"
+                        >
+                          💬 WhatsApp <span x-text="getCurrentPersonToCall().Name"></span>
+                        </a>
                         <a 
                           :href="'tel:' + getCurrentPersonToCall().Phone" 
                           class="bg-blue-500 hover:bg-blue-600 text-white px-4 py-2 rounded-lg text-sm font-semibold transition"
@@ -452,7 +495,15 @@
                       <p class="text-sm font-semibold text-blue-800 mb-2">
                         📞 Call <span x-text="getCurrentPersonToCall().Name"></span> to collect the key
                       </p>
-                      <div class="flex justify-center">
+                      <div class="flex justify-center gap-2">
+                        <a 
+                          :href="getWhatsAppLink(getCurrentPersonToCall().Phone, getCurrentPersonToCall().Name)"
+                          target="_blank"
+                          rel="noopener"
+                          class="bg-green-500 hover:bg-green-600 text-white px-4 py-2 rounded-lg text-sm font-semibold transition"
+                        >
+                          💬 WhatsApp <span x-text="getCurrentPersonToCall().Name"></span>
+                        </a>
                         <a 
                           :href="'tel:' + getCurrentPersonToCall().Phone" 
                           class="bg-blue-500 hover:bg-blue-600 text-white px-4 py-2 rounded-lg text-sm font-semibold transition"
@@ -531,6 +582,26 @@
         </div>
       </div>
     </template>
+  <footer class="mt-10 max-w-2xl mx-auto">
+      <div class="bg-white rounded-2xl shadow p-4 flex items-center justify-between gap-4">
+        <div class="flex-1">
+          <p class="text-sm text-gray-600 mb-2">
+            Learn or push improvements on GitHub — if this project is helpful, support me with a coffee :D ☕
+          </p>
+          <a href="https://github.com/mrozyyev/key-tracker" target="_blank" rel="noopener"
+             class="inline-flex items-center gap-2 px-4 py-3 rounded-lg border border-gray-200 bg-gray-900 text-white hover:bg-black shadow">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true" class="w-5 h-5 fill-current"><path d="M12 2C6.477 2 2 6.486 2 12.021c0 4.425 2.865 8.18 6.839 9.504.5.092.683-.217.683-.483 0-.238-.009-.868-.014-1.704-2.782.607-3.369-1.345-3.369-1.345-.454-1.155-1.11-1.463-1.11-1.463-.907-.62.069-.607.069-.607 1.003.071 1.53 1.032 1.53 1.032.892 1.53 2.341 1.088 2.91.832.091-.65.35-1.088.636-1.34-2.222-.254-4.555-1.114-4.555-4.956 0-1.094.39-1.99 1.029-2.69-.103-.254-.446-1.276.098-2.66 0 0 .84-.27 2.75 1.027A9.564 9.564 0 0 1 12 7.07c.85.004 1.705.115 2.505.338 1.909-1.296 2.748-1.027 2.748-1.027.545 1.384.202 2.406.1 2.66.64.7 1.027 1.596 1.027 2.69 0 3.852-2.337 4.699-4.566 4.949.359.31.679.923.679 1.86 0 1.344-.012 2.427-.012 2.757 0 .268.18.58.69.481A10.02 10.02 0 0 0 22 12.021C22 6.486 17.523 2 12 2Z"/></svg>
+            <span class="text-sm font-semibold">View Project on GitHub</span>
+          </a>
+        </div>
+        <div class="flex items-center">
+          <noscript>
+            <a href="https://www.buymeacoffee.com/mrozyyev" class="text-sm text-gray-700 hover:text-gray-900">Buy me a coffee</a>
+          </noscript>
+          <script type="text/javascript" src="https://cdnjs.buymeacoffee.com/1.0.0/button.prod.min.js" data-name="bmc-button" data-slug="mrozyyev" data-color="#FFDD00" data-emoji="☕"  data-font="Poppins" data-text="Buy me a coffee" data-outline-color="#000000" data-font-color="#000000" data-coffee-color="#ffffff"></script>
+        </div>
+      </div>
+    </footer>
   </div>
 
   <script>
@@ -739,6 +810,22 @@
           if (!this.user || !this.queue) return false;
           const userPhone = this.normalizePhone(this.user.phone);
           return this.queue.some(q => this.normalizePhone(q.Phone) === userPhone);
+        },
+
+        getWhatsAppLink(phone, name) {
+          const digits = this.normalizePhone(phone);
+          const message = `hey ${name} key is available to take/use. let's meet and I'll give you the key; remember to mark you got the key when you receive it, or when you finish using it mark complete and follow the same steps: write or call the next person to hand out here https://key-tracker.pages.dev/`;
+          return `https://wa.me/${digits}?text=${encodeURIComponent(message)}`;
+        },
+
+        getWhatsAppLinkToHolder() {
+          const phone = this.status?.HolderPhone;
+          if (!phone) return '#';
+          const digits = this.normalizePhone(phone);
+          const holderName = this.status?.HolderName || '';
+          const sender = this.user?.name ? ` I'm ${this.user.name}.` : '';
+          const message = `Hi ${holderName}, when can I get the key?${sender} Thanks!`;
+          return `https://wa.me/${digits}?text=${encodeURIComponent(message)}`;
         },
 
         getCurrentPersonToCall() {
