--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
   <div class="max-w-2xl mx-auto">
     <!-- Header -->
     <div class="bg-white rounded-2xl shadow-xl p-6 mb-6">
-      <div class="flex items-center justify-between">
+      <div class="flex flex-col items-start gap-3">
         <div>
           <h1 class="text-3xl font-bold bg-gradient-to-r from-blue-600 to-purple-600 bg-clip-text text-transparent">
             🔑 Dorm Key Tracker
@@ -304,20 +304,25 @@
                 <span class="text-gray-600 flex items-center gap-2">
                   <span>🙋</span> Current Holder
                 </span>
-                <div class="flex items-center gap-2">
+                <div class="flex flex-col gap-1">
                   <span class="font-semibold text-gray-800" x-text="status.HolderName || 'None'"></span>
+                  <!-- Line 1: Call button with number -->
                   <template x-if="status.HolderPhone && status.HolderPhone.trim() !== ''">
-                    <a :href="'tel:' + status.HolderPhone" class="text-blue-600 hover:text-blue-800 text-sm flex items-center gap-1 hover:underline font-semibold">
+                    <a 
+                      :href="'tel:' + status.HolderPhone"
+                      class="text-blue-600 hover:text-blue-800 text-xs sm:text-sm inline-flex items-center gap-2 hover:underline font-semibold max-w-[70vw] sm:max-w-none truncate"
+                    >
                       <span>📞</span>
-                      <span x-text="status.HolderPhone"></span>
+                      <span class="truncate" x-text="status.HolderPhone"></span>
                     </a>
                   </template>
+                  <!-- Line 2: WhatsApp icon with label -->
                   <template x-if="status.HolderPhone && status.HolderPhone.trim() !== ''">
                     <a 
                       :href="getWhatsAppLinkToHolder()"
                       target="_blank"
                       rel="noopener"
-                      class="text-green-600 hover:text-green-800 text-sm flex items-center gap-1 font-semibold"
+                      class="text-green-600 hover:text-green-800 text-xs sm:text-sm inline-flex items-center gap-2 font-semibold"
                       title="Message holder on WhatsApp"
                     >
                       <span>💬</span>
@@ -598,18 +603,18 @@
       </div>
     </template>
   <footer class="mt-10 max-w-2xl mx-auto">
-      <div class="bg-white rounded-2xl shadow p-4 flex items-center justify-between gap-4">
-        <div class="flex-1">
+      <div class="bg-white rounded-2xl shadow p-6 flex flex-col items-center justify-center gap-4 text-center">
+        <div class="w-full">
           <p class="text-sm text-gray-600 mb-2">
             Learn or push improvements on GitHub — if this project is helpful, support me with a coffee :D ☕
           </p>
           <a href="https://github.com/mrozyyev/key-tracker" target="_blank" rel="noopener"
-             class="inline-flex items-center gap-2 px-4 py-3 rounded-lg border border-gray-200 bg-gray-900 text-white hover:bg-black shadow">
+             class="inline-flex justify-center w-full max-w-xl mx-auto items-center gap-2 px-4 py-3 rounded-lg border border-gray-200 bg-gray-900 text-white hover:bg-black shadow">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true" class="w-5 h-5 fill-current"><path d="M12 2C6.477 2 2 6.486 2 12.021c0 4.425 2.865 8.18 6.839 9.504.5.092.683-.217.683-.483 0-.238-.009-.868-.014-1.704-2.782.607-3.369-1.345-3.369-1.345-.454-1.155-1.11-1.463-1.11-1.463-.907-.62.069-.607.069-.607 1.003.071 1.53 1.032 1.53 1.032.892 1.53 2.341 1.088 2.91.832.091-.65.35-1.088.636-1.34-2.222-.254-4.555-1.114-4.555-4.956 0-1.094.39-1.99 1.029-2.69-.103-.254-.446-1.276.098-2.66 0 0 .84-.27 2.75 1.027A9.564 9.564 0 0 1 12 7.07c.85.004 1.705.115 2.505.338 1.909-1.296 2.748-1.027 2.748-1.027.545 1.384.202 2.406.1 2.66.64.7 1.027 1.596 1.027 2.69 0 3.852-2.337 4.699-4.566 4.949.359.31.679.923.679 1.86 0 1.344-.012 2.427-.012 2.757 0 .268.18.58.69.481A10.02 10.02 0 0 0 22 12.021C22 6.486 17.523 2 12 2Z"/></svg>
             <span class="text-sm font-semibold">View Project on GitHub</span>
           </a>
         </div>
-        <div class="flex items-center">
+        <div class="flex items-center justify-center w-full">
           <noscript>
             <a href="https://www.buymeacoffee.com/mrozyyev" class="text-sm text-gray-700 hover:text-gray-900">Buy me a coffee</a>
           </noscript>
